# CMocka_Testing

./: CMakeLists.txt  CMakeLists.txt~  README.md  dut_sources.cmake  main.c  stub_sources.cmake  testcases_sources.cmake  wrap_functions.cmake
DUT/: CMakeLists.txt  CMakeLists.txt~
Stubs/: CMakeLists.txt  CMakeLists.txt~  Stubs.c  Stubs.h
cmake/Modules/: CodeCoverage.cmake  CodeCoverage.cmake~
testcases/: CMakeLists.txt  CMakeLists.txt~  testcases.c  testcases.h  testcases.h~
